--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Json Data file
-Data/*.json
+/Assets/Resources/Data/PlayerScore.json
